5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4130/executions/1723_2507.log
== TEST (2019-05-13 22:37:50) 
-- CODE:
p = int(input("Quantidade de pirarucus: "))
pc = int(input("Percentual de crescimento: ")) / 100

m = 0

while(p > 0 and p < 8000):
	pr = int(input("Pirarucus retirados: "))
	p = p + p * pc - pr
	m = m + 1
if(p <= 0):
	print("ZERO")
else:
	print("MAXIMO")
print(m)
-- OUTPUT:
MAXIMO
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 22:38:16) 
-- CODE:
p = int(input("Quantidade de pirarucus: "))
pc = int(input("Percentual de crescimento: ")) / 100

m = 0

while(p > 0 and p < 8000):
	pr = int(input("Pirarucus retirados: "))
	p = p + p * pc - pr
	m = m + 1
if(p <= 0):
	print("ZERO")
else:
	print("MAXIMO")
print(m)
-- EXECUTION TIME:
0.162388
-- TEST CASE 1:
---- input:
1234
56
7
8
9
10
11
---- correct output:
MAXIMO
5
---- user output:
MAXIMO
5
-- TEST CASE 2:
---- input:
5432
1
987
654
4321
---- correct output:
ZERO
3
---- user output:
ZERO
3
-- TEST CASE 3:
---- input:
2468
35
1234
900
1
2
3
4
5
---- correct output:
MAXIMO
7
---- user output:
MAXIMO
7
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 22:17:26) 
-- CODE:
p = int(input("Quantidade inicial de pirarucus: "))
pc = int(input("Percentual de crescimento: ")) / 100

m = 0

while(p > 0 and p < 8000):
	pr = int(input("Quantidade de pirarucus retirados: "))
	p = p + p´* pc - pr
	m = m + 1
if(p <= 0):
	print("ZERO")
else:
	print("MAXIMO")
print(m)
-- ERROR:
File "XXXX", line 8
    p = p + p´* pc - pr
             ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 22:17:35) 
-- CODE:
p = int(input("Quantidade inicial de pirarucus: "))
pc = int(input("Percentual de crescimento: ")) / 100

m = 0

while(p > 0 and p < 8000):
	pr = int(input("Quantidade de pirarucus retirados: "))
	p = p + p * pc - pr
	m = m + 1
if(p <= 0):
	print("ZERO")
else:
	print("MAXIMO")
print(m)
-- OUTPUT:
MAXIMO
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 22:17:48) 
-- CODE:
p = int(input("Quantidade inicial de pirarucus: "))
pc = int(input("Percentual de crescimento: ")) / 100

m = 0

while(p > 0 and p < 8000):
	pr = int(input("Quantidade de pirarucus retirados: "))
	p = p + p * pc - pr
	m = m + 1
if(p <= 0):
	print("ZERO")
else:
	print("MAXIMO")
print(m)
-- EXECUTION TIME:
0.225977
-- TEST CASE 1:
---- input:
1234
56
7
8
9
10
11
---- correct output:
MAXIMO
5
---- user output:
MAXIMO
5
-- TEST CASE 2:
---- input:
5432
1
987
654
4321
---- correct output:
ZERO
3
---- user output:
ZERO
3
-- TEST CASE 3:
---- input:
2468
35
1234
900
1
2
3
4
5
---- correct output:
MAXIMO
7
---- user output:
MAXIMO
7
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 22:18:16) 
-- CODE:
p = int(input("Quantidade inicial de pirarucus: "))
pc = int(input("Percentual de crescimento: ")) / 100

m = 0

while(p > 0 and p < 8000):
	pr = int(input("Quantidade de pirarucus retirados: "))
	p = p + p * pc - pr
	m = m + 1
if(p <= 0):
	print("ZERO")
else:
	print("MAXIMO")
print(m)
-- OUTPUT:
MAXIMO
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
